// Unit test to verify review command usage consolidation behavior
// generated by polka.codes

import { describe, expect, test } from 'bun:test'
import { UsageMeter } from '@polka-codes/core'

describe('Review command usage consolidation', () => {
  test('should consolidate usage tracking across review workflow and task execution', () => {
    // Simulate the usage meter being shared between review workflow and task execution
    const sharedUsageMeter = new UsageMeter({
      anthropic: {
        'claude-3-5-sonnet-20241022': {
          inputPrice: 3,
          outputPrice: 15,
          cacheWritesPrice: 3.75,
          cacheReadsPrice: 0.3,
        },
      },
    })

    // Simulate review workflow usage
    sharedUsageMeter.incrementMessageCount(1)
    const reviewUsage = sharedUsageMeter.usage

    // Simulate task execution using the same usage meter
    sharedUsageMeter.incrementMessageCount(2)
    const finalUsage = sharedUsageMeter.usage

    // Verify that the usage is cumulative
    expect(finalUsage.messageCount).toBe(3) // 1 from review + 2 from task
    expect(finalUsage.messageCount).toBeGreaterThan(reviewUsage.messageCount)

    // Verify usage consolidation prevents double printing
    expect(finalUsage).toMatchSnapshot()
  })

  test('should handle case where no task runs after review', () => {
    const usageMeter = new UsageMeter()

    // Simulate review workflow only
    usageMeter.incrementMessageCount(1)
    const usage = usageMeter.usage

    expect(usage.messageCount).toBe(1)
    expect(usage).toMatchSnapshot()
  })
})
