// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Review command usage consolidation should consolidate usage tracking across review workflow and task execution 1`] = `
{
  "cachedRead": 0,
  "cost": 0,
  "input": 0,
  "messageCount": 3,
  "output": 0,
}
`;

exports[`Review command usage consolidation should handle case where no task runs after review 1`] = `
{
  "cachedRead": 0,
  "cost": 0,
  "input": 0,
  "messageCount": 1,
  "output": 0,
}
`;
